updated styles, screenshot and README

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 </head>
 <body>
  <main>
-  <img src="./images/image-header-desktop.jpg" alt="image" class="bg-header">
-  <img src="./images/image-header-mobile.jpg" alt="Mobile" class="bg-mobile">
+   <div class="bg-images">
+   <img src="./images/image-header-desktop.jpg" alt="image" class="bg-desktop">
+   <img src="./images/image-header-mobile.jpg" alt="Mobile" class="bg-mobile">
+  </div>
  <div class="container">
   <h1> Get <span>insights</span> that help your business grow.</h1>
  <p class="paragraph">
